@@ -1,13 +1,0 @@
-#!/bin/sh
-
-if [ "$1" = "" ]; then
-	echo "Usage: file2cat <file>"
-	exit 1
-fi
-
-case "$1" in
-	*.gz|*.Z|*.tgz)	cmd=zcat;;
-	*.bz|*.bz2)	cmd=bzcat;;
-	*)		cmd=cat;;
-esac
-$cmd $1
