@@ -8,6 +8,7 @@ pam (1.0.1-2) UNRELEASED; urgency=low
   * Update the Debian PAM mini-policy to remove references to the
     long-obsolete pam_pwdb, and clarify the relationship between pam_stack
     and @include.
+  * Drop various bits of unused cruft from the debian/ directory.
 
  -- Steve Langasek <vorlon@debian.org>  Wed, 30 Jul 2008 00:55:10 -0700
 
